# netcat-openbsd

./: CMakeLists.txt  nc.1  netcat.c  socks.c
openbsd-compat/: base64.c  readpassphrase.c
